# NeonHud

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docker/: entrypoint.sh
packaging/rpmbuild/SPECS/: neonhud.spec
packaging/systemd/: neonhud.service
src/neonhud/: cli.py
src/neonhud/collectors/: cpu.py  disk.py  mem.py  net.py  procs.py
src/neonhud/core/: __init__.py  config.py  logging.py
src/neonhud/models/: snapshot.py
src/neonhud/ui/: __init__.py  dashboard.py  panels.py  pro_dash.py  process_table.py  theme.py  themes.py
src/neonhud/utils/: __init__.py  bar.py  clock.py  format.py  history.py  mypy.ini  platform.py  pro_dash.py  smooth.py
tests/: test_bar.py  test_cli.py  test_cli_dash.py  test_cli_error_handling.py  test_cli_pro.py  test_cli_report.py  test_cli_top.py  test_config.py  test_cpu.py  test_cpu_panel.py  test_dashboard.py  test_dashboard_history.py  test_dashboard_net.py  test_disk.py  test_disk_nic_panels.py  test_history.py  test_logging.py  test_logging_integration.py  test_mem.py  test_memory_panel.py  test_net.py  test_panels.py  test_pro_dash.py  test_process_table.py  test_process_table_theme.py  test_procs.py  test_snapshot.py  test_spark.py  test_theme.py  test_themes.py  test_time.py
