[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neonhud"
version = "0.1.0"
description = "Linux-native performance HUD (terminal UI) with systemd/RPM focus."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NeonHud" }]
dependencies = [
  "psutil>=5.9.0",
  "rich>=13.7.0"
]

[project.optional-dependencies]
dev = [
  "black>=24.3.0",
  "ruff>=0.4.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.9.0",
  "types-psutil"
]

[project.scripts]
neonhud = "neonhud.cli:main"