[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neonhud"
version = "0.1.0"
description = "Linux-native performance HUD (terminal UI) with cyberpunk aesthetic."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NeonHud" }]
dependencies = [
  "psutil>=5.9.0",
  "rich>=13.7.0"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/yourusername/NeonHud"
Issues = "https://github.com/yourusername/NeonHud/issues"

[project.optional-dependencies]
dev = [
  "black>=24.3.0",
  "ruff>=0.4.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.9.0",
  "types-psutil"
]

[project.scripts]
neonhud = "neonhud.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neonhud = ["py.typed"]
